Bug 736915 - Print Selection prints a blank page when the selection is inside a table.  r=bz

When rendering just the current Selection (Print - Selection) then don't create display items
for table-related frames unless the frame itself is part of the selection, and always ask
descendant frames to build display lists [in case they are selected].